--- a/.env
+++ b/.env
@@ -1,5 +1,7 @@
-ODOO_DB_NAME=odoodb
+POSTGRES_DB=postgres
+POSTGRES_USER=odoo
+POSTGRES_PASSWORD=odoo
+ODOO_DB_HOST=db
 ODOO_DB_USER=odoo
-ODOO_DB_PASSWORD=odoo123
-ODOO_DB_PORT=3306
+ODOO_DB_PASSWORD=odoo
 ODOO_PORT=8069
